   * New portrait for Dwarf Thunderer, Dwarf Dragonguard, Human Pikeman, Dwarf Fighter, Dwarf Lord.
 * Language and i18n:
   * updated translations: Chinese (Traditional), Czech, French, German,
     Hungarian, Italian, Polish, Slovak, Spanish
 * User interface:
   * Hide the "Network Player" option for Local MP Games (bug #12596).
   * Potraits with an icon are TC'ed again.
 * WML Engine:
   * Prevent duplicate id conflicts when cloning units with WML (bug #12894)
   * [time_area], in EventWML, can now accept comma-separated lists of area ids
     for removing, but not for inserting; in the latter case, only the first id
     is considered to avoid stacking time_areas over a single location by
     accident.
 * Miscellaneous and bug fixes
   * Fix clients not agreeing on remaining movepoints (bug #12467)
   * Fix summoning of other players recruit list on turn 1 (bug #12783)
   * Fix [item] overlays with visible_in_fog=yes magically becoming
     visible_in_fog=no (the former default for a missing attribute) when loading
     saved games - because the game was looking for a fogged= attribute
     instead on loading.
   * Made [item] overlays always default to visible_in_fog=yes if not
     specified.
   * Made [label] overlays always default to visible_in_fog=yes if not
     specified.

Version 1.5.8:
 * Campaigns:
   * An Orcish Incursion
     * Converted to the new gold carryover system
   * Eastern Invasion
     * Fixed victory not triggering correctly in 'The Crossing'
     * Fixed missing time of day schedules in several scenarios
     * Fixed various problems in 'Northern Outpost'
   * The Hammer of Thursagan
     * Converted to the new gold carryover system.
   * The Rise of Wesnoth
     * Renamed "Lord Dionli" to "Lady Dionli".
   * Son of the Black Eye
     * Made scenarios 'Silent Forest' and 'Shan Taum the Smug' harder.
   * Legend of Wesmere 
     * Fixed the bug with savegames in scenario 3
 * Graphics: